--- a/jfrog-quickstart-examples/Dockerfile
+++ b/jfrog-quickstart-examples/Dockerfile
@@ -1,2 +1,2 @@
-FROM ${SERVER_NAME}-${VIRTUAL_REPO_NAME}.jfrog.io/ubuntu:16.04
+FROM ${SERVER_NAME}.jfrog.io/${VIRTUAL_REPO_NAME}/ubuntu:16.04
 CMD printf "CONGRATULATIONS!!! You have just set up your first Docker repository with the new JFrog Platform!"
